--- a/SITE2.html
+++ b/SITE2.html
@@ -41,6 +41,14 @@
 
     </table>
 
+ <form action="handler.php">
+  <p><b>rate the site</b></p>
+  <p><input type="radio" name="answer" value="a1">GOOD<Br>
+  <input type="radio" name="answer" value="a2">EXELENT<Br>
+  <input type="radio" name="answer" value="a3">PERFECT</p>
+  <p><input type="submit"></p>
+ </form>
+
 
  </body>
 </html>
